# DuneCat

./: .gitignore  CMakeLists.txt  CMakePresets.json  DuneCatConfig.h.in  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/DuneCat.App/: CMakeLists.txt  main.cpp  tools.cpp  tools.h
src/DuneCat.App/GUI/: main.qml
src/DuneCat.App/UI/: main.qml
src/DuneCat.Main/: main.cpp
src/DuneCat_App/: CMakeLists.txt  DCLaunchButton.qml  DCSettings.cpp  DCSettings.h  DCTools.cpp  DCTools.h  EssentialHeaders.h  datevalidator.cpp  datevalidator.h  dcprocesstablemodel.cpp  dcprocesstablemodel.h  dcsettings.cpp  dcsettings.h  dcsortfilterprocessmodel.cpp  dcsortfilterprocessmodel.h  dctools.cpp  dctools.h  essentialheaders.h  idgenerator.cpp  idgenerator.h  intvalidator.cpp  intvalidator.h  main.cpp  main.qml  main.qml.autosave  processtablemodel.cpp  processtablemodel.h  qtquickcontrols2.conf  settings.cpp  settings.h  sortfilterprocessmodel.cpp  sortfilterprocessmodel.h  sqlsortfiltermodel.cpp  sqlsortfiltermodel.h  sqltablemodel.cpp  sqltablemodel.h  systemtray.cpp  systemtray.h  tools.cpp
src/DuneCat_App/icons/: index.theme
src/DuneCat_App/icons/Default/: index.theme
src/DuneCat_App/qml/: DCAdminPanel.qml  DCMainWindow.qml  DCStyle.qml
src/DuneCat_App/qml/components/: DCSideRoundedRect.qml  DCTableHeaderColumn.qml  DCTextInputInt.qml
src/DuneCat_App/qml/controls/: DCButton.qml  DCCalendar.qml  DCCloseButton.qml  DCDatePicker.qml  DCDeviceTable.qml  DCLaunchButton.qml  DCProcessHistoryTable.qml  DCProcessTable.qml  DCSearchTextField.qml  DCSegmentedButton.qml  DCSwitchSelector.qml  DCTableHeader.qml  DCTableHeaderColumn.qml  DCTextPopup.qml  DCToggleButton.qml
src/DuneCat_App/qml/pages/: DCMainPage.qml  DCSettingsPage.qml  SettingsDialog.qml
src/DuneCat_Core/: CMakeLists.txt  dbbase.cpp  dbbase.h  dbmanager.cpp  dbmanager.h  dbreader.cpp  dbreader.h  dcprocessinfo.h  dcprocesstracker.cpp  dcprocesstracker.h  globalsignalemitter.cpp  globalsignalemitter.h  processinfo.h  processtracker.h  sqlqueryfilter.cpp  sqlqueryfilter.h  tools.cpp  tools.h  wmiclient.cpp  wmiclient.h  wmieventsink.cpp  wmieventsink.h
src/DuneCat_Core/linux/: dcprocesstracker.cpp  linuxprocessobserver.cpp  linuxprocessobserver.h  processtracker.cpp
src/DuneCat_Core/macos/: OSXProcessObserver.h  OSXProcessObserver.mm  dcprocesstracker.cpp  dcprocesstracker.mm  processtracker.mm
src/DuneCat_Core/windows/: dcprocesstracker.cpp  processtracker.cpp  wmiclient.cpp  wmiclient.h  wmieventsink.cpp  wmieventsink.h
src/DuneCat_Network/: CMakeLists.txt  DCNetworkModels.h  DCStunClient.cpp  DCStunClient.h  NetworkHeaders.pch  STUNHeader  dcnetworkmodels.h  dcstunclient.cpp  dcstunclient.h  dctrackermanager.cpp  dctrackermanager.h  networkheaders.h  networkmodels.h  stunclient.cpp  stunclient.h  trackermanager.cpp  trackermanager.h
tests/: CMakeLists.txt  tst_networkingtests.cpp
tests/core/: CMakeLists.txt  tst_coretests.cpp
tests/networking/: CMakeLists.txt  tst_networkingtests.cpp
